--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0356.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0356.html
@@ -1,50 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0356.png">
-      <!--<div class="ocr_carea" title="bbox 1002 1390 1472 1766">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1130 1402 1365 1449">
         <span id="w_0" class="ocr_word" title="bbox 1130 1408 1157 1449">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">S</ins>
-            <del title="nlp 0.90">S</del>
-          </span>
-        </span>
-        <span id="w_1" class="ocr_word" title="bbox 1178 1407 1198 1448">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
-          </span>
-        </span>
-        <span id="w_2" class="ocr_word" title="bbox 1221 1404 1254 1446">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">G</ins>
-            <del title="nlp 0.90">G</del>
-          </span>
-        </span>
-        <span id="w_3" class="ocr_word" title="bbox 1276 1403 1305 1443">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">L</ins>
-            <del title="nlp 0.90">L</del>
-          </span>
-        </span>
-        <span id="w_4" class="ocr_word" title="bbox 1329 1402 1365 1442">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">A</ins>
-            <del title="nlp 0.90">A</del>
+            <ins title="nlp 2.00">SIGLA</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1016 1537 1437 1584">
         <span id="w_5" class="ocr_word" title="bbox 1016 1550 1048 1584">
           <span class="alternatives">
@@ -54,7 +25,7 @@
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1075 1563 1118 1577">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">=</ins>
+            <ins title="nlp 2.00">=</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1145 1543 1343 1580">
@@ -69,8 +40,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1019 1595 1453 1642">
         <span id="w_9" class="ocr_word" title="bbox 1019 1610 1045 1642">
           <span class="alternatives">
@@ -80,13 +49,12 @@
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1073 1621 1115 1637">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">=</ins>
+            <ins title="nlp 2.00">=</ins>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1146 1604 1336 1639">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Vatieauus</ins>
-            <del title="nlp 0.90">Vatieauus</del>
+            <ins title="nlp 2.00">Vaticanus</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1366 1595 1453 1631">
@@ -95,17 +63,15 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1018 1654 1456 1701">
-        <span id="w_13" class="ocr_word" title="bbox 1018 1669 1048 1701" xml:lang="grc">
+        <span id="w_13" class="ocr_word" title="bbox 1018 1669 1048 1701" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ὶ̓͂</ins>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 1075 1682 1118 1695">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">=</ins>
+            <ins title="nlp 2.00">=</ins>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 1146 1663 1337 1699">
@@ -120,8 +86,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1030 1716 1434 1762">
         <span id="w_17" class="ocr_word" title="bbox 1030 1739 1048 1762">
           <span class="alternatives">
@@ -131,7 +95,7 @@
         </span>
         <span id="w_18" class="ocr_word" title="bbox 1074 1742 1117 1755">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">=</ins>
+            <ins title="nlp 2.00">=</ins>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1145 1720 1298 1758">
@@ -147,8 +111,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
