--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0267.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0267.html
@@ -112,19 +112,19 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_19" class="ocr_word" title="bbox 1459 247 1622 271" lang="grc">
+        <span id="w_19_0" class="ocr_word" title="bbox 1459 247 1622 271">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἰατοιχὸς</ins>
+            <ins class="alt" title="nlp 2.00">ἰατρικὸς</ins>
+          </span>
+        </span>
+        <span id="w_19_1" class="ocr_word" title="bbox 1459 247 1622 271">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1662 248 1729 271" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">μὲν</ins>
-          </span>
-        </span>
-        <span id="w_21" class="ocr_word" title="bbox 1770 235 1828 273" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -432,9 +432,9 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_81" class="ocr_word" title="bbox 1753 590 1830 614" lang="grc">
+        <span id="w_81_0" class="ocr_word" title="bbox 1753 590 1830 614">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐπιΔεῖ</ins>
+            <ins class="alt" title="nlp 2.00">ἐπι-</ins>
           </span>
         </span>
       </span>
@@ -712,9 +712,14 @@
             <ins class="alt" title="nlp 1.00">μονίμῳ</ins>
           </span>
         </span>
-        <span id="w_135" class="ocr_word" title="bbox 930 985 1325 1037" lang="grc">
+        <span id="w_135_0" class="ocr_word" title="bbox 930 985 1325 1037">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαραχτηριζομένης.</ins>
+            <ins class="alt" title="nlp 2.00">χαρακτηριζομένης.</ins>
+          </span>
+        </span>
+        <span id="w_135_1" class="ocr_word" title="bbox 930 985 1325 1037">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_136" class="ocr_word" title="bbox 1380 999 1483 1038" lang="grc">
@@ -730,11 +735,6 @@
         <span id="w_138" class="ocr_word" title="bbox 1590 1002 1612 1038" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡ</ins>
-          </span>
-        </span>
-        <span id="w_139" class="ocr_word" title="bbox 1646 988 1829 1035" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διάθεσις,</ins>
           </span>
         </span>
       </span>
@@ -940,9 +940,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 154 1254 1828 1314">
-        <span id="w_178" class="ocr_word" title="bbox 154 1254 463 1309" lang="grc">
+        <span id="w_178_0" class="ocr_word" title="bbox 154 1254 463 1309">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαθολιχωτέραν</ins>
+            <ins class="alt" title="nlp 2.00">καθολικωτέραν</ins>
+          </span>
+        </span>
+        <span id="w_178_1" class="ocr_word" title="bbox 154 1254 463 1309">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_179" class="ocr_word" title="bbox 495 1272 563 1309" lang="grc">
@@ -988,11 +993,6 @@
         <span id="w_187" class="ocr_word" title="bbox 1617 1275 1692 1314" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐχ</ins>
-          </span>
-        </span>
-        <span id="w_188" class="ocr_word" title="bbox 1724 1260 1828 1307" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἕξις᾿,</ins>
           </span>
         </span>
       </span>
@@ -1275,9 +1275,14 @@
             <ins class="alt" title="nlp 1.00">διάθεσις</ins>
           </span>
         </span>
-        <span id="w_244" class="ocr_word" title="bbox 344 1615 607 1653" lang="grc">
+        <span id="w_244_0" class="ocr_word" title="bbox 344 1615 607 1653">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατηγορεῖται</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορεῖται</ins>
+          </span>
+        </span>
+        <span id="w_244_1" class="ocr_word" title="bbox 344 1615 607 1653">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_245" class="ocr_word" title="bbox 641 1616 770 1645" lang="grc">
@@ -1323,11 +1328,6 @@
         <span id="w_253" class="ocr_word" title="bbox 1575 1605 1630 1648" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὶς</ins>
-          </span>
-        </span>
-        <span id="w_254" class="ocr_word" title="bbox 1661 1606 1831 1648" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διάθεσις</ins>
           </span>
         </span>
       </span>
@@ -1657,9 +1657,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_318" class="ocr_word" title="bbox 602 2028 832 2069" lang="grc">
+        <span id="w_318_0" class="ocr_word" title="bbox 602 2028 832 2069">
           <span class="alternatives">
-            <ins title="nlp 2.00">συγχριτιχῷ</ins>
+            <ins class="alt" title="nlp 2.00">συγκριτικῷ</ins>
+          </span>
+        </span>
+        <span id="w_318_1" class="ocr_word" title="bbox 602 2028 832 2069">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_319" class="ocr_word" title="bbox 873 2031 1111 2069" lang="grc">
@@ -1687,11 +1692,6 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_324" class="ocr_word" title="bbox 1695 2018 1829 2056" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λευκὸν</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 159 2082 1828 2139">
         <span id="w_325" class="ocr_word" title="bbox 159 2098 213 2136" lang="grc">
@@ -1706,7 +1706,7 @@
         </span>
         <span id="w_327" class="ocr_word" title="bbox 421 2082 603 2135" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(μέλανες</ins>
+            <ins title="nlp 2.00">μέλανες</ins>
           </span>
         </span>
         <span id="w_328" class="ocr_word" title="bbox 633 2099 704 2136" lang="grc">
@@ -1994,9 +1994,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 903 2522 1081 2574">
-        <span id="w_384" class="ocr_word" title="bbox 903 2537 929 2574" lang="grc">
+        <span id="w_384_0" class="ocr_word" title="bbox 903 2537 929 2574">
           <span class="alternatives">
-            <ins title="nlp 2.00">δρομιχούς.</ins>
+            <ins class="alt" title="nlp 2.00">δρομικούς.</ins>
           </span>
         </span>
       </span>
@@ -2322,9 +2322,9 @@
             <ins class="alt" title="nlp 1.00">13</ins>
           </span>
         </span>
-        <span id="w_449" class="ocr_word" title="bbox 1797 2970 1898 3003" lang="grc">
+        <span id="w_449_0" class="ocr_word" title="bbox 1797 2970 1898 3003">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατηγορουμένης</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορουμένης</ins>
           </span>
         </span>
       </span>
@@ -2335,9 +2335,14 @@
             <del title="nlp 0.90">H:</del>
           </span>
         </span>
-        <span id="w_452" class="ocr_word" title="bbox 389 3017 686 3063" lang="grc">
+        <span id="w_452_0" class="ocr_word" title="bbox 389 3017 686 3063">
           <span class="alternatives">
-            <ins title="nlp 2.00">χχτηθοργουμένη</ins>
+            <ins class="alt" title="nlp 2.00">κατηθοργουμένη</ins>
+          </span>
+        </span>
+        <span id="w_452_1" class="ocr_word" title="bbox 389 3017 686 3063">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_453" class="ocr_word" title="bbox 713 3018 792 3059">
@@ -2357,9 +2362,14 @@
             <ins title="nlp 2.00">16</ins>
           </span>
         </span>
-        <span id="w_456" class="ocr_word" title="bbox 1090 3018 1287 3052" lang="grc">
+        <span id="w_456_0" class="ocr_word" title="bbox 1090 3018 1287 3052">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαθολιχοτ.</ins>
+            <ins class="alt" title="nlp 2.00">καθολικοτ.</ins>
+          </span>
+        </span>
+        <span id="w_456_1" class="ocr_word" title="bbox 1090 3018 1287 3052">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_457" class="ocr_word" title="bbox 1314 3020 1339 3052">
@@ -2371,16 +2381,6 @@
         <span id="w_458" class="ocr_word" title="bbox 1517 3018 1555 3051">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">18</ins>
-          </span>
-        </span>
-        <span id="w_459" class="ocr_word" title="bbox 1581 3017 1731 3061" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λέγοντες</ins>
-          </span>
-        </span>
-        <span id="w_460" class="ocr_word" title="bbox 1757 3017 1898 3060">
-          <span class="alternatives">
-            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
       </span>
@@ -2483,8 +2483,7 @@
         </span>
         <span id="w_479" class="ocr_word" title="bbox 162 3137 366 3177">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oiaxptxTjxiL</ins>
-            <del title="nlp 0.90">oiaxptxTjxiL</del>
+            <ins title="nlp 2.00">διακριτηκῶ</ins>
           </span>
         </span>
         <span id="w_480" class="ocr_word" title="bbox 393 3134 422 3167">
