--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0558.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0558.html
@@ -71,9 +71,14 @@
             <ins class="alt" title="nlp 1.00">εἴδους</ins>
           </span>
         </span>
-        <span id="w_13" class="ocr_word" title="bbox 795 193 1148 247" lang="grc">
+        <span id="w_13_0" class="ocr_word" title="bbox 795 193 1148 247">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατηγορούμενον·</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορούμενον·</ins>
+          </span>
+        </span>
+        <span id="w_13_1" class="ocr_word" title="bbox 795 193 1148 247">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 1188 209 1234 234" lang="grc">
@@ -109,11 +114,6 @@
         <span id="w_20" class="ocr_word" title="bbox 1836 194 2023 236" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καθολικὰ</ins>
-          </span>
-        </span>
-        <span id="w_21" class="ocr_word" title="bbox 2055 211 2118 237" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -1182,9 +1182,14 @@
             <ins class="alt" title="nlp 2.00">λόγος.</ins>
           </span>
         </span>
-        <span id="w_228_1" class="ocr_word" title="bbox 854 1446 979 1498">
+        <span id="w_228_1_0" class="ocr_word" title="bbox 854 1446 979 1498">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαταχρηστιχῶς</ins>
+            <ins class="alt" title="nlp 2.00">καταχρηστικῶς</ins>
+          </span>
+        </span>
+        <span id="w_228_1_1" class="ocr_word" title="bbox 854 1446 979 1498">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_229" class="ocr_word" title="bbox 1389 1460 1430 1485" lang="grc">
@@ -1210,11 +1215,6 @@
         <span id="w_233" class="ocr_word" title="bbox 1883 1459 1944 1483" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπὶ</ins>
-          </span>
-        </span>
-        <span id="w_234" class="ocr_word" title="bbox 1968 1443 2112 1484" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐσίας.</ins>
           </span>
         </span>
       </span>
@@ -1666,11 +1666,6 @@
             <ins class="alt" title="nlp 1.00">12,13</ins>
           </span>
         </span>
-        <span id="w_323" class="ocr_word" title="bbox 645 2148 705 2191" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τόδε</ins>
-          </span>
-        </span>
         <span id="w_324" class="ocr_word" title="bbox 819 2151 936 2193" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Τὸ δὲ ἴδιον διαιροῦσι τετραχῶς.</ins>
@@ -1680,8 +1675,7 @@
       <span class="ocr_line" title="bbox 539 2252 2108 2312">
         <span id="w_325" class="ocr_word" title="bbox 539 2252 596 2295">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ou</ins>
-            <del title="nlp 0.90">Ou</del>
+            <ins title="nlp 2.00">Οὐ</ins>
           </span>
         </span>
         <span id="w_326" class="ocr_word" title="bbox 635 2257 817 2310" lang="grc">
@@ -1794,9 +1788,14 @@
             <ins class="alt" title="nlp 2.00">εἴδει</ins>
           </span>
         </span>
-        <span id="w_346_1" class="ocr_word" title="bbox 1206 2477 1320 2518">
+        <span id="w_346_1_0" class="ocr_word" title="bbox 1206 2477 1320 2518">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">συμβέβηχεν.</ins>
+            <ins class="alt" title="nlp 2.00">συμβέβηκεν,</ins>
+          </span>
+        </span>
+        <span id="w_346_1_1" class="ocr_word" title="bbox 1206 2477 1320 2518">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_347" class="ocr_word" title="bbox 1693 2491 1732 2515" lang="grc">
@@ -1812,11 +1811,6 @@
         <span id="w_349" class="ocr_word" title="bbox 1871 2490 1929 2528" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μὴ</ins>
-          </span>
-        </span>
-        <span id="w_350" class="ocr_word" title="bbox 1962 2473 2106 2514" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παντί.</ins>
           </span>
         </span>
       </span>
@@ -1970,19 +1964,29 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 352 2762 2131 2811">
-        <span id="w_379" class="ocr_word" title="bbox 352 2763 416 2796" lang="grc">
+        <span id="w_379_0" class="ocr_word" title="bbox 352 2763 416 2796">
           <span class="alternatives">
-            <ins title="nlp 2.00">χἄν εἰσι] χαὶ εἰ Κ</ins>
+            <ins class="alt" title="nlp 2.00">κἄν</ins>
           </span>
         </span>
-        <span id="w_380" class="ocr_word" title="bbox 799 2768 819 2801" lang="grc">
+        <span id="w_379_1" class="ocr_word" title="bbox 352 2763 416 2796">
           <span class="alternatives">
-            <ins title="nlp 2.00">3 εἰσὶ TV</ins>
+            <ins class="alt" title="nlp 2.00">εἰσι]</ins>
+          </span>
+        </span>
+        <span id="w_380_0" class="ocr_word" title="bbox 799 2768 819 2801">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_380_1" class="ocr_word" title="bbox 799 2768 819 2801">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">εἰ</ins>
           </span>
         </span>
         <span id="w_381" class="ocr_word" title="bbox 1077 2767 1099 2800">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">4</ins>
+            <ins title="nlp 2.00">Κ 3 εἰσὶ TV 4</ins>
           </span>
         </span>
         <span id="w_382" class="ocr_word" title="bbox 1126 2778 1176 2811">
@@ -1993,8 +1997,7 @@
         </span>
         <span id="w_383" class="ocr_word" title="bbox 1195 2767 1254 2800">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xotl</ins>
-            <del title="nlp 0.90">xotl</del>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_384" class="ocr_word" title="bbox 1272 2777 1337 2799">
@@ -2011,8 +2014,7 @@
         </span>
         <span id="w_386" class="ocr_word" title="bbox 1486 2777 1544 2798">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">too</ins>
-            <del title="nlp 0.90">too</del>
+            <ins title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
         <span id="w_387" class="ocr_word" title="bbox 1570 2776 1680 2808">
@@ -2040,8 +2042,7 @@
         </span>
         <span id="w_391" class="ocr_word" title="bbox 1953 2775 1987 2796">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oe</ins>
-            <del title="nlp 0.90">oe</del>
+            <ins title="nlp 2.00">δὲ</ins>
           </span>
         </span>
         <span id="w_392" class="ocr_word" title="bbox 2015 2773 2080 2796">
@@ -2182,9 +2183,14 @@
             <ins class="alt" title="nlp 1.00">τοῦτο</ins>
           </span>
         </span>
-        <span id="w_417" class="ocr_word" title="bbox 767 2884 939 2931" lang="grc">
+        <span id="w_417_0" class="ocr_word" title="bbox 767 2884 939 2931">
           <span class="alternatives">
-            <ins title="nlp 2.00">φαλαχρόν—ἄνθρ.</ins>
+            <ins class="alt" title="nlp 2.00">φαλακρόν—ἄνθρ.</ins>
+          </span>
+        </span>
+        <span id="w_417_1" class="ocr_word" title="bbox 767 2884 939 2931">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_418" class="ocr_word" title="bbox 1116 2885 1167 2927">
@@ -2234,12 +2240,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_427" class="ocr_word" title="bbox 2067 2879 2129 2912">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TV</ins>
-            <del title="nlp 0.90">TV</del>
           </span>
         </span>
       </span>
