--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0612.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0612.html
@@ -87,19 +87,34 @@
             <ins class="alt" title="nlp 1.00">διελέγχουσι</ins>
           </span>
         </span>
-        <span id="w_14" class="ocr_word" title="bbox 1004 282 1029 305">
+        <span id="w_14_0" class="ocr_word" title="bbox 1004 282 1029 305">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x203B;</ins>
+            <ins class="alt" title="nlp 2.00">*</ins>
           </span>
         </span>
-        <span id="w_15" class="ocr_word" title="bbox 1061 288 1086 304">
+        <span id="w_14_1" class="ocr_word" title="bbox 1004 282 1029 305">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x203B;</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 1118 280 1143 304" lang="grc">
+        <span id="w_15_0" class="ocr_word" title="bbox 1061 288 1086 304">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x203B;</ins>
+            <ins class="alt" title="nlp 2.00">*</ins>
+          </span>
+        </span>
+        <span id="w_15_1" class="ocr_word" title="bbox 1061 288 1086 304">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_16_0" class="ocr_word" title="bbox 1118 280 1143 304">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">*</ins>
+          </span>
+        </span>
+        <span id="w_16_1" class="ocr_word" title="bbox 1118 280 1143 304">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1183 282 1249 319" lang="grc">
@@ -120,21 +135,6 @@
         <span id="w_20" class="ocr_word" title="bbox 1532 280 1558 318" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φύσει</ins>
-          </span>
-        </span>
-        <span id="w_21" class="ocr_word" title="bbox 1672 278 1818 318" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φωνήν,</ins>
-          </span>
-        </span>
-        <span id="w_22" class="ocr_word" title="bbox 1850 263 1971 303" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὕτως</ins>
-          </span>
-        </span>
-        <span id="w_23" class="ocr_word" title="bbox 2003 263 2065 302" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -345,9 +345,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 403 540 2066 597">
-        <span id="w_64" class="ocr_word" title="bbox 403 562 426 586">
+        <span id="w_64_0" class="ocr_word" title="bbox 403 562 426 586">
           <span class="alternatives">
-            <ins title="nlp 2.00">α&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ᾱ</ins>
+          </span>
+        </span>
+        <span id="w_64_1" class="ocr_word" title="bbox 403 562 426 586">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_65" class="ocr_word" title="bbox 458 559 505 585" lang="grc">
@@ -393,11 +398,6 @@
         <span id="w_73" class="ocr_word" title="bbox 1590 552 1763 577" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δεύτερον</ins>
-          </span>
-        </span>
-        <span id="w_74" class="ocr_word" title="bbox 1787 550 2066 591" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σημαινόμενον</ins>
           </span>
         </span>
       </span>
@@ -660,14 +660,24 @@
             <ins class="alt" title="nlp 1.00">κάμηλον</ins>
           </span>
         </span>
-        <span id="w_125" class="ocr_word" title="bbox 722 885 913 939" lang="grc">
+        <span id="w_125_0" class="ocr_word" title="bbox 722 885 913 939">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;χάμηλον</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;κάμηλον</ins>
           </span>
         </span>
-        <span id="w_126" class="ocr_word" title="bbox 951 884 1014 924" lang="grc">
+        <span id="w_125_1" class="ocr_word" title="bbox 722 885 913 939">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_126_0" class="ocr_word" title="bbox 951 884 1014 924">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_126_1" class="ocr_word" title="bbox 951 884 1014 924">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_127" class="ocr_word" title="bbox 1048 882 1119 937" lang="grc">
@@ -693,16 +703,6 @@
         <span id="w_131" class="ocr_word" title="bbox 1697 895 1794 919" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τινες</ins>
-          </span>
-        </span>
-        <span id="w_132" class="ocr_word" title="bbox 1823 895 1938 919" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αἰτίαι</ins>
-          </span>
-        </span>
-        <span id="w_133" class="ocr_word" title="bbox 1976 879 2070 919" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰσὶν</ins>
           </span>
         </span>
       </span>
@@ -1027,7 +1027,7 @@
         </span>
         <span id="w_194" class="ocr_word" title="bbox 1913 1292 2070 1343" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ψεῦδος··</ins>
+            <ins title="nlp 2.00">ψεῦδος·</ins>
           </span>
         </span>
       </span>
@@ -1094,9 +1094,9 @@
             <ins class="alt" title="nlp 1.00">θεῷ</ins>
           </span>
         </span>
-        <span id="w_207" class="ocr_word" title="bbox 1447 1565 1481 1603">
+        <span id="w_207_0" class="ocr_word" title="bbox 1447 1565 1481 1603">
           <span class="alternatives">
-            <ins title="nlp 2.00">γ&amp;#x772;.</ins>
+            <ins class="alt" title="nlp 2.00">ῡ.</ins>
           </span>
         </span>
       </span>
@@ -1188,7 +1188,7 @@
       <span class="ocr_line" title="bbox 526 1849 2078 1909">
         <span id="w_223" class="ocr_word" title="bbox 526 1856 679 1899" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἴωθεν</ins>
+            <ins title="nlp 2.00">Εἴωθεν</ins>
           </span>
         </span>
         <span id="w_224" class="ocr_word" title="bbox 715 1857 911 1909" lang="grc">
@@ -1345,14 +1345,14 @@
             <ins class="alt" title="nlp 1.00">τέχνην</ins>
           </span>
         </span>
-        <span id="w_254" class="ocr_word" title="bbox 1818 2001 1836 2024" lang="grc">
+        <span id="w_254_0" class="ocr_word" title="bbox 1818 2001 1836 2024">
           <span class="alternatives">
-            <ins title="nlp 2.00">ε&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ε&amp;#x772;</ins>
           </span>
         </span>
-        <span id="w_255" class="ocr_word" title="bbox 1857 1984 2077 2029" lang="grc">
+        <span id="w_254_1" class="ocr_word" title="bbox 1818 2001 1836 2024">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δοξάζουσιν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1617,7 +1617,7 @@
         </span>
         <span id="w_309" class="ocr_word" title="bbox 1093 2347 1158 2371" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοὐ</ins>
+            <ins title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
         <span id="w_310" class="ocr_word" title="bbox 1180 2345 1361 2385" lang="grc">
@@ -1999,8 +1999,7 @@
         </span>
         <span id="w_385" class="ocr_word" title="bbox 1334 2796 1419 2819">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coiT.</ins>
-            <del title="nlp 0.90">coiT.</del>
+            <ins title="nlp 2.00">corr.</ins>
           </span>
         </span>
         <span id="w_386" class="ocr_word" title="bbox 1445 2786 1471 2818">
@@ -2124,19 +2123,9 @@
             <ins class="alt" title="nlp 1.00">4.5</ins>
           </span>
         </span>
-        <span id="w_409_0" class="ocr_word" title="bbox 446 2912 558 2945">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἔδει</ins>
-          </span>
-        </span>
-        <span id="w_409_1" class="ocr_word" title="bbox 446 2912 558 2945">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">—</ins>
-          </span>
-        </span>
         <span id="w_410" class="ocr_word" title="bbox 572 2911 702 2956" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ῥήματα</ins>
+            <ins class="alt" title="nlp 2.00">ἔδει—ῥήματα</ins>
           </span>
         </span>
         <span id="w_411" class="ocr_word" title="bbox 729 2909 838 2942">
@@ -2233,7 +2222,7 @@
         </span>
         <span id="w_428" class="ocr_word" title="bbox 1516 2958 1599 2991" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄλλα</ins>
+            <ins title="nlp 2.00">ἄλλα</ins>
           </span>
         </span>
         <span id="w_429" class="ocr_word" title="bbox 1625 2957 1702 2990">
